5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4182/executions/1630_2939.log
== TEST (2019-04-02 16:06:20) 
-- CODE:
lucro= 83/100*12.00

-- OUTPUT:
0.5
90.0
55.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:13:06) 
-- CODE:
venda= float(input())
emp= 100.00+1/3*(venda)

-- OUTPUT:
0.5
90.0
55.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:14:41) 
-- CODE:
venda= float(input())
emp= 100.00+1/3*(venda)
total=(venda*12.00)-emp
print(round(total,2))
-- EXECUTION TIME:
0.128566
-- TEST CASE 1:
---- input:
30
---- correct output:
139.04
---- user output:
250.0
-- TEST CASE 2:
---- input:
80
---- correct output:
537.44
---- user output:
833.33
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:14:42) 
-- CODE:
venda= float(input())
emp= 100.00+1/3*(venda)
total=(venda*12.00)-emp
print(round(total,2))
-- OUTPUT:
250.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:15:09) 
-- CODE:
venda= float(input())
emp= 100.00+1/3*(venda)
total=venda-emp
print(round(total,2))
-- EXECUTION TIME:
0.194045
-- TEST CASE 1:
---- input:
30
---- correct output:
139.04
---- user output:
-80.0
-- TEST CASE 2:
---- input:
80
---- correct output:
537.44
---- user output:
-46.67
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:15:10) 
-- CODE:
venda= float(input())
emp= 100.00+1/3*(venda)
total=venda-emp
print(round(total,2))
-- OUTPUT:
-80.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:15:57) 
-- CODE:
venda= float(input())
emp= 100.00+1/3*(venda)
total=venda*12.00-emp
print(round(total,2))
-- OUTPUT:
250.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:15:58) 
-- CODE:
venda= float(input())
emp= 100.00+1/3*(venda)
total=venda*12.00-emp
print(round(total,2))
-- EXECUTION TIME:
0.14844
-- TEST CASE 1:
---- input:
30
---- correct output:
139.04
---- user output:
250.0
-- TEST CASE 2:
---- input:
80
---- correct output:
537.44
---- user output:
833.33
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:15:59) 
-- CODE:
venda= float(input())
emp= 100.00+1/3*(venda)
total=venda*12.00-emp
print(round(total,2))
-- OUTPUT:
250.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:16:39) 
-- CODE:
venda= float(input())
emp= 100.00+20%*(venda)
total=venda*12.00-emp
print(round(total,2))
-- ERROR:
File "XXXX", line 2
    emp= 100.00+20%*(venda)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:16:56) 
-- CODE:
venda= float(input())
emp= 100.00
total=venda*12.00-emp
print(round(total,2))
-- EXECUTION TIME:
0.191074
-- TEST CASE 1:
---- input:
30
---- correct output:
139.04
---- user output:
260.0
-- TEST CASE 2:
---- input:
80
---- correct output:
537.44
---- user output:
860.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:16:57) 
-- CODE:
venda= float(input())
emp= 100.00
total=venda*12.00-emp
print(round(total,2))
-- OUTPUT:
260.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:16:59) 
-- CODE:
venda= float(input())
emp= 100.00
total=venda*12.00-emp
print(round(total,2))
-- OUTPUT:
260.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:17:16) 
-- CODE:
venda= float(input())
emp= 100.00
total=(venda*12.00)-emp
print(round(total,2))
-- OUTPUT:
260.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:17:18) 
-- CODE:
venda= float(input())
emp= 100.00
total=(venda*12.00)-emp
print(round(total,2))
-- EXECUTION TIME:
0.218304
-- TEST CASE 1:
---- input:
30
---- correct output:
139.04
---- user output:
260.0
-- TEST CASE 2:
---- input:
80
---- correct output:
537.44
---- user output:
860.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:23:41) 
-- CODE:
venda= float(input())
emp= 100.00+venda*0.2
total=(venda*12.00)-emp
print(round(total,2))
-- OUTPUT:
254.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:23:43) 
-- CODE:
venda= float(input())
emp= 100.00+venda*0.2
total=(venda*12.00)-emp
print(round(total,2))
-- EXECUTION TIME:
0.148798
-- TEST CASE 1:
---- input:
30
---- correct output:
139.04
---- user output:
254.0
-- TEST CASE 2:
---- input:
80
---- correct output:
537.44
---- user output:
844.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:24:17) 
-- CODE:
venda= float(input())
emp= 100.00+(venda*0.2)
total=(venda)-emp
print(round(total,2))
-- OUTPUT:
-76.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:24:19) 
-- CODE:
venda= float(input())
emp= 100.00+(venda*0.2)
total=(venda)-emp
print(round(total,2))
-- EXECUTION TIME:
0.185772
-- TEST CASE 1:
---- input:
30
---- correct output:
139.04
---- user output:
-76.0
-- TEST CASE 2:
---- input:
80
---- correct output:
537.44
---- user output:
-36.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:24:19) 
-- CODE:
venda= float(input())
emp= 100.00+(venda*0.2)
total=(venda)-emp
print(round(total,2))
-- OUTPUT:
-76.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:24:33) 
-- CODE:
venda= float(input())
emp= 100.00+(venda*0.2)
total=(venda*12.00)-emp
print(round(total,2))
-- OUTPUT:
254.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:25:13) 
-- CODE:
venda= int(input())
emp= 100.00+(venda*0.2)
total=(venda*12.00)-emp
print(round(total,2))
-- OUTPUT:
254.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:25:14) 
-- CODE:
venda= int(input())
emp= 100.00+(venda*0.2)
total=(venda*12.00)-emp
print(round(total,2))
-- EXECUTION TIME:
0.124618
-- TEST CASE 1:
---- input:
30
---- correct output:
139.04
---- user output:
254.0
-- TEST CASE 2:
---- input:
80
---- correct output:
537.44
---- user output:
844.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:25:15) 
-- CODE:
venda= int(input())
emp= 100.00+(venda*0.2)
total=(venda*12.00)-emp
print(round(total,2))
-- OUTPUT:
254.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:25:17) 
-- CODE:
venda= int(input())
emp= 100.00+(venda*0.2)
total=(venda*12.00)-emp
print(round(total,2))
-- EXECUTION TIME:
0.175193
-- TEST CASE 1:
---- input:
30
---- correct output:
139.04
---- user output:
254.0
-- TEST CASE 2:
---- input:
80
---- correct output:
537.44
---- user output:
844.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:31:22) 
-- CODE:
venda = int(input())
emp = 100.00 + 0.2*(venda)
total = 12.00*(venda) - emp
print(round(total,2))


-- EXECUTION TIME:
0.201377
-- TEST CASE 1:
---- input:
30
---- correct output:
139.04
---- user output:
254.0
-- TEST CASE 2:
---- input:
80
---- correct output:
537.44
---- user output:
844.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:35:44) 
-- CODE:
venda = int(input())
emp= float(input())
valor=12.00
salario= 100.0+0.2*venda
total= venda*valor-emp
print(round(total,2))


-- EXECUTION TIME:
0.165787
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2939/main.py", line 2, in <module>
    emp= float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:36:16) 
-- CODE:
venda = int(input())
valor=12.00
salario= 100.0+0.2*venda
total= venda*valor-salario
print(round(total,2))


-- EXECUTION TIME:
0.189974
-- TEST CASE 1:
---- input:
30
---- correct output:
139.04
---- user output:
254.0
-- TEST CASE 2:
---- input:
80
---- correct output:
537.44
---- user output:
844.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:39:06) 
-- CODE:
venda = int(input())
emp=float(input())
valor=12.00
salario=0.2*venda
total= (venda*valor)-(emp+salario)
print(round(total,2))


-- EXECUTION TIME:
0.15974
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2939/main.py", line 2, in <module>
    emp=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:39:31) 
-- CODE:
venda = int(input())
emp=100.00
valor=12.00
salario=0.2*venda
total= (venda*valor)-(emp+salario)
print(round(total,2))


-- EXECUTION TIME:
0.147144
-- TEST CASE 1:
---- input:
30
---- correct output:
139.04
---- user output:
254.0
-- TEST CASE 2:
---- input:
80
---- correct output:
537.44
---- user output:
844.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:42:06) 
-- CODE:
venda = int(input())
emp=100.00
valor=12.00
salario=0.2*(venda*valor)
total= (venda*valor)-(emp+salario)
print(round(total,2))


-- EXECUTION TIME:
0.199734
-- TEST CASE 1:
---- input:
30
---- correct output:
139.04
---- user output:
188.0
-- TEST CASE 2:
---- input:
80
---- correct output:
537.44
---- user output:
668.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:42:08) 
-- CODE:
venda = int(input())
emp=100.00
valor=12.00
salario=0.2*(venda*valor)
total= (venda*valor)-(emp+salario)
print(round(total,2))


-- OUTPUT:
188.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:44:33) 
-- CODE:
venda = int(input())
emp=100.00
valor=12.00
vt=venda*valor
salario=0.2*(vt)
total=(vt)-(emp+salario)
print(round(total,2))


-- EXECUTION TIME:
0.223639
-- TEST CASE 1:
---- input:
30
---- correct output:
139.04
---- user output:
188.0
-- TEST CASE 2:
---- input:
80
---- correct output:
537.44
---- user output:
668.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:46:17) 
-- CODE:
venda = int(input())
emp=100.00
valor=12.00
lucro=venda*valor
salario=0.2*(vt)
total=(lucro)-(emp+salario)
print(round(total,2))


-- EXECUTION TIME:
0.203579
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2939/main.py", line 5, in <module>
    salario=0.2*(vt)
NameError: name 'vt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:46:19) 
-- CODE:
venda = int(input())
emp=100.00
valor=12.00
lucro=venda*valor
salario=0.2*(vt)
total=(lucro)-(emp+salario)
print(round(total,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    salario=0.2*(vt)
NameError: name 'vt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:46:34) 
-- CODE:
venda = int(input())
emp=100.00
valor=12.00
lucro=venda*valor
salario=0.2*(lucro)
total=(lucro)-(emp+salario)
print(round(total,2))


-- OUTPUT:
188.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:47:26) 
-- CODE:
venda = int(input())
emp=100.0
valor=12.0
lucro=venda*valor
salario=0.2*(lucro)
total=(lucro)-(emp+salario)
print(round(total,2))


-- OUTPUT:
188.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:51:40) 
-- CODE:
venda = int(input())
emp=100.0
valor=12.0
lucro=venda*valor*0.83
salario=0.2*(lucro)
total=(lucro)-(emp+salario)
print(round(total,2))


-- EXECUTION TIME:
0.122207
-- TEST CASE 1:
---- input:
30
---- correct output:
139.04
---- user output:
139.04
-- TEST CASE 2:
---- input:
80
---- correct output:
537.44
---- user output:
537.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
